# libmsikeyboard

./: .gitignore  CMakeLists.txt  Findlibmsikeyboard.cmake  README.md  libmsikeyboard.spec  libmsikeyboard_cmake.spec  makearchive.sh  meson.build  msikeyboard.c  msikeyboard.h  msikeyboard.pc.in  test-msikeyboard.c
cmake-modules/: FindHIDAPI.cmake
python/: msikeyboardmodule.c  python3-msikeyboard.spec  setup.py  tests.py
python/MSIKeyboard/: __init__.py  exception.py  region.py
